--- a/style.css
+++ b/style.css
@@ -1,61 +1,46 @@
 header{
-display: flex;
+   display: flex;
+   align-content: center;
+   justify-content: space-between;
+   padding: 10px -50px 10px 10px;
+   margin: 10px 10px -40px 10px;
 
-align-items: center;
-
-justify-content: space-between;
-
-background-image: url(Images/portada.png);
 
 }
 
-
-
-h1{
-font-weight: 700;
-background-color: black;
-color: white;
-font-size: 120%;
-border-radius: 5px;
-padding: 10px 25px;
-display: flex;
+.redes{
+width: 35px;
 align-items: center;
-text-align: center;
-margin-right: 20px;
+padding: 2px;
+margin-right: 30px;
+
 }
-
-
-
-   
-
 
 .logo{
-width: 200px;
-height: 200px;
-
-
+   width: 300px;
+ 
 }
+
+.sociales{   
+      align-items: center;
+   display:flex;
+   justify-content:right
+}
+
+
+
+
 
 .e{
    display: flex;
 }
 
 
-
-
-*{
-   box-sizing: border-box;
-}
-
-
-
-
-
 nav{
    display: flex;
    flex-direction: row;
    background-color: black;
-   justify-content: center;
+   justify-content: left;
 }
 
 
@@ -80,6 +65,17 @@ nav a:hover{
    background-color: rgb(170, 9, 9)
 
 }
+
+h1{
+   padding: 12px;
+   background-color: black;
+   font-size: 22px;
+   color: white;
+   margin: 20px;
+}
+
+
+
 
 
 nav b{
@@ -150,17 +146,10 @@ width: 100%;
 
 body{
 
-    margin: 20px;
-    padding: 20px 50px;
-    background-color: rgb(201, 41, 41);
-}
+    background-color: rgb(173, 1, 1);
+   
 
-h2{
 
-font-family: Arial, Helvetica, sans-serif;
-color: white;
-background-color: black;
-border: 30px solid black;
 
 
 }
@@ -170,7 +159,7 @@ border: 30px solid black;
  .banner{
 
     max-width: 100%;
-    max-height: 10%;
+    height: 500px;
 
  }
  .imagen3{
@@ -257,18 +246,54 @@ border: 30px solid black;
 .container-form .btn-enviar:hover{
     background: black;
 }
-p{
-
-   color: white;
-}
 
 .card{
 
 border-radius: 0px;
 border-color:  rgb(170, 9, 9);
 
+}
+
+
+
+
+
+.card-group{
+
+padding: 20px;
 
 }
+
+
+
+.card-text{
+
+   color: black;
+   
+}
+
+
+
+
+
+a{
+
+   background-color: black;
+   color: white;
+   font-size: 20px;
+   text-decoration: none;
+   padding: 7px;
+   border-radius: 5px;  
+} 
+
+a:hover{
+   background-color:rgb(173, 1, 1);
+
+}
+
+
+
+
 
 footer{
 
@@ -276,11 +301,69 @@ display: flex;
 justify-content: space-between;
    background-color: black;
    align-items: center;
+  
 
 }
 
 p{
-
-text-align: right;
+color: white;
+text-align: left;
 padding: 30px;
+}
+
+
+h2{
+
+color: white;
+}
+
+.btn-enviar:hover{
+
+   background-color: rgb(173, 1, 1);
+}
+
+.videos{
+   margin: 0;
+   background-color: rgb(202, 121, 0);
+   padding: 70px;
+}
+
+h6{
+   
+   background-color:rgb(202, 121, 0);
+   display: flex;
+   flex-direction: row;
+   font-size: 25px;
+  padding: 12px 12px 12px 60px;
+   justify-content: left;
+   color: white;
+  margin: 0px 0px -20px 0px;
+}
+
+.pie{
+
+   text-align: right;
+}
+
+
+.carousel-inner{
+
+height: 650px;
+
+}
+
+
+button{
+background-color: black;
+color: white;
+padding: 9px;
+border: none;
+border-radius: 5px;
+}
+
+button:hover{
+
+   background-color: rgb(212, 7, 7);
+   color: white;
+   border-radius: 5px;
 }
